# rlm-mhc

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/model/: base_1b.yaml
configs/training/: finetune.yaml
docs/: TRAINING.md
scripts/: train.py  validate_model.py
src/rlm_mhc/: __init__.py  types.py
src/rlm_mhc/model/: __init__.py  attention.py  components.py  config.py  transformer.py
src/rlm_mhc/model/mhc/: __init__.py  layers.py  sinkhorn.py
src/rlm_mhc/scaffold/: __init__.py  chunking.py  context.py  functions.py  repl.py
src/rlm_mhc/training/: __init__.py  trainer.py
tests/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_mhc.py  test_model.py  test_scaffold.py
